[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/images/bright-bg.jpg" type="Texture" id=2]
[ext_resource path="res://assets/fonts/regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/buttons/CellButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/buttons/GoBackButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="bright-bg" type="Sprite" parent="."]
position = Vector2( 359.381, 640.902 )
scale = Vector2( 0.99674, 0.890577 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="EventsHTTPRequest" type="HTTPRequest" parent="."]

[node name="TitleLabel" type="Label" parent="."]
margin_right = 720.0
margin_bottom = 249.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "...
VS
..."
align = 1

[node name="LocalBoard" type="Control" parent="."]
editor/display_folded = true
margin_left = 338.0
margin_top = 625.0
margin_right = 378.0
margin_bottom = 665.0
__meta__ = {
"_edit_lock_": true
}

[node name="Cell00Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = -295.0
margin_right = -225.0
margin_bottom = -225.0

[node name="Cell10Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = -225.0
margin_right = -225.0
margin_bottom = -155.0

[node name="Cell20Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = -155.0
margin_right = -225.0
margin_bottom = -85.0

[node name="Cell30Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = -85.0
margin_right = -225.0
margin_bottom = -15.0

[node name="Cell40Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = -15.0
margin_right = -225.0
margin_bottom = 55.0

[node name="Cell50Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = 55.0
margin_right = -225.0
margin_bottom = 125.0

[node name="Cell60Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = 125.0
margin_right = -225.0
margin_bottom = 195.0

[node name="Cell70Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = 195.0
margin_right = -225.0
margin_bottom = 265.0

[node name="Cell80Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = 265.0
margin_right = -225.0
margin_bottom = 335.0

[node name="Cell01Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -225.0
margin_top = -295.0
margin_right = -155.0
margin_bottom = -225.0

[node name="Cell11Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -225.0
margin_top = -225.0
margin_right = -155.0
margin_bottom = -155.0

[node name="Cell21Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -225.0
margin_top = -155.0
margin_right = -155.0
margin_bottom = -85.0

[node name="Cell31Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -225.0
margin_top = -85.0
margin_right = -155.0
margin_bottom = -15.0

[node name="Cell41Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -225.0
margin_top = -15.0
margin_right = -155.0
margin_bottom = 55.0

[node name="Cell51Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -225.0
margin_top = 55.0
margin_right = -155.0
margin_bottom = 125.0

[node name="Cell61Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -225.0
margin_top = 125.0
margin_right = -155.0
margin_bottom = 195.0

[node name="Cell71Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -225.0
margin_top = 195.0
margin_right = -155.0
margin_bottom = 265.0

[node name="Cell81Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -225.0
margin_top = 265.0
margin_right = -155.0
margin_bottom = 335.0

[node name="Cell02Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -155.0
margin_top = -295.0
margin_right = -85.0
margin_bottom = -225.0

[node name="Cell12Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -155.0
margin_top = -225.0
margin_right = -85.0
margin_bottom = -155.0

[node name="Cell22Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -155.0
margin_top = -155.0
margin_right = -85.0
margin_bottom = -85.0

[node name="Cell32Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -155.0
margin_top = -85.0
margin_right = -85.0
margin_bottom = -15.0

[node name="Cell42Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -155.0
margin_top = -15.0
margin_right = -85.0
margin_bottom = 55.0

[node name="Cell52Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -155.0
margin_top = 55.0
margin_right = -85.0
margin_bottom = 125.0

[node name="Cell62Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -155.0
margin_top = 125.0
margin_right = -85.0
margin_bottom = 195.0

[node name="Cell72Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -155.0
margin_top = 195.0
margin_right = -85.0
margin_bottom = 265.0

[node name="Cell82Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -155.0
margin_top = 265.0
margin_right = -85.0
margin_bottom = 335.0

[node name="Cell03Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -85.0
margin_top = -295.0
margin_right = -15.0
margin_bottom = -225.0

[node name="Cell13Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -85.0
margin_top = -225.0
margin_right = -15.0
margin_bottom = -155.0

[node name="Cell23Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -85.0
margin_top = -155.0
margin_right = -15.0
margin_bottom = -85.0

[node name="Cell33Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -85.0
margin_top = -85.0
margin_right = -15.0
margin_bottom = -15.0

[node name="Cell43Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -85.0
margin_top = -15.0
margin_right = -15.0
margin_bottom = 55.0

[node name="Cell53Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -85.0
margin_top = 55.0
margin_right = -15.0
margin_bottom = 125.0

[node name="Cell63Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -85.0
margin_top = 125.0
margin_right = -15.0
margin_bottom = 195.0

[node name="Cell73Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -85.0
margin_top = 195.0
margin_right = -15.0
margin_bottom = 265.0

[node name="Cell83Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -85.0
margin_top = 265.0
margin_right = -15.0
margin_bottom = 335.0

[node name="Cell04Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -15.0
margin_top = -295.0
margin_right = 55.0
margin_bottom = -225.0

[node name="Cell14Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -15.0
margin_top = -225.0
margin_right = 55.0
margin_bottom = -155.0

[node name="Cell24Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -15.0
margin_top = -155.0
margin_right = 55.0
margin_bottom = -85.0

[node name="Cell34Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -15.0
margin_top = -85.0
margin_right = 55.0
margin_bottom = -15.0

[node name="Cell44Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -15.0
margin_top = -15.0
margin_right = 55.0
margin_bottom = 55.0

[node name="Cell54Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -15.0
margin_top = 55.0
margin_right = 55.0
margin_bottom = 125.0

[node name="Cell64Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -15.0
margin_top = 125.0
margin_right = 55.0
margin_bottom = 195.0

[node name="Cell74Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -15.0
margin_top = 195.0
margin_right = 55.0
margin_bottom = 265.0

[node name="Cell84Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = -15.0
margin_top = 265.0
margin_right = 55.0
margin_bottom = 335.0

[node name="Cell05Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 55.0
margin_top = -295.0
margin_right = 125.0
margin_bottom = -225.0

[node name="Cell15Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 55.0
margin_top = -225.0
margin_right = 125.0
margin_bottom = -155.0

[node name="Cell25Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 55.0
margin_top = -155.0
margin_right = 125.0
margin_bottom = -85.0

[node name="Cell35Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 55.0
margin_top = -85.0
margin_right = 125.0
margin_bottom = -15.0

[node name="Cell45Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 55.0
margin_top = -15.0
margin_right = 125.0
margin_bottom = 55.0

[node name="Cell55Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 55.0
margin_top = 55.0
margin_right = 125.0
margin_bottom = 125.0

[node name="Cell65Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 55.0
margin_top = 125.0
margin_right = 125.0
margin_bottom = 195.0

[node name="Cell75Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 55.0
margin_top = 195.0
margin_right = 125.0
margin_bottom = 265.0

[node name="Cell85Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 55.0
margin_top = 265.0
margin_right = 125.0
margin_bottom = 335.0

[node name="Cell06Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 125.0
margin_top = -295.0
margin_right = 195.0
margin_bottom = -225.0

[node name="Cell16Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 125.0
margin_top = -225.0
margin_right = 195.0
margin_bottom = -155.0

[node name="Cell26Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 125.0
margin_top = -155.0
margin_right = 195.0
margin_bottom = -85.0

[node name="Cell36Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 125.0
margin_top = -85.0
margin_right = 195.0
margin_bottom = -15.0

[node name="Cell46Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 125.0
margin_top = -15.0
margin_right = 195.0
margin_bottom = 55.0

[node name="Cell56Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 125.0
margin_top = 55.0
margin_right = 195.0
margin_bottom = 125.0

[node name="Cell66Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 125.0
margin_top = 125.0
margin_right = 195.0
margin_bottom = 195.0

[node name="Cell76Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 125.0
margin_top = 195.0
margin_right = 195.0
margin_bottom = 265.0

[node name="Cell86Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 125.0
margin_top = 265.0
margin_right = 195.0
margin_bottom = 335.0

[node name="Cell07Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 195.0
margin_top = -295.0
margin_right = 265.0
margin_bottom = -225.0

[node name="Cell17Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 195.0
margin_top = -225.0
margin_right = 265.0
margin_bottom = -155.0

[node name="Cell27Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 195.0
margin_top = -155.0
margin_right = 265.0
margin_bottom = -85.0

[node name="Cell37Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 195.0
margin_top = -85.0
margin_right = 265.0
margin_bottom = -15.0

[node name="Cell47Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 195.0
margin_top = -15.0
margin_right = 265.0
margin_bottom = 55.0

[node name="Cell57Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 195.0
margin_top = 55.0
margin_right = 265.0
margin_bottom = 125.0

[node name="Cell67Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 195.0
margin_top = 125.0
margin_right = 265.0
margin_bottom = 195.0

[node name="Cell77Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 195.0
margin_top = 195.0
margin_right = 265.0
margin_bottom = 265.0

[node name="Cell87Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 195.0
margin_top = 265.0
margin_right = 265.0
margin_bottom = 335.0

[node name="Cell08Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 265.0
margin_top = -295.0
margin_right = 335.0
margin_bottom = -225.0

[node name="Cell18Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 265.0
margin_top = -225.0
margin_right = 335.0
margin_bottom = -155.0

[node name="Cell28Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 265.0
margin_top = -155.0
margin_right = 335.0
margin_bottom = -85.0

[node name="Cell38Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 265.0
margin_top = -85.0
margin_right = 335.0
margin_bottom = -15.0

[node name="Cell48Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 265.0
margin_top = -15.0
margin_right = 335.0
margin_bottom = 55.0

[node name="Cell58Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 265.0
margin_top = 55.0
margin_right = 335.0
margin_bottom = 125.0

[node name="Cell68Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 265.0
margin_top = 125.0
margin_right = 335.0
margin_bottom = 195.0

[node name="Cell78Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 265.0
margin_top = 195.0
margin_right = 335.0
margin_bottom = 265.0

[node name="Cell88Button" parent="LocalBoard" instance=ExtResource( 4 )]
margin_left = 265.0
margin_top = 265.0
margin_right = 335.0
margin_bottom = 335.0

[node name="CurrentSignLabel" type="Label" parent="."]
margin_top = 969.0
margin_right = 720.0
margin_bottom = 1061.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="WinnerLabel" type="Label" parent="."]
margin_top = 1061.0
margin_right = 720.0
margin_bottom = 1153.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X wins!"
align = 1

[node name="GlobalBoard" type="Control" parent="."]
editor/display_folded = true
margin_left = 338.0
margin_top = 625.0
margin_right = 378.0
margin_bottom = 665.0
__meta__ = {
"_edit_lock_": true
}

[node name="Cell00Button" parent="GlobalBoard" instance=ExtResource( 4 )]
visible = false
margin_left = -295.0
margin_top = -295.0
margin_right = -225.0
margin_bottom = -225.0
rect_scale = Vector2( 3, 3 )

[node name="Cell01Button" parent="GlobalBoard" instance=ExtResource( 4 )]
visible = false
margin_left = -85.0
margin_top = -295.0
margin_right = -15.0
margin_bottom = -225.0
rect_scale = Vector2( 3, 3 )

[node name="Cell02Button" parent="GlobalBoard" instance=ExtResource( 4 )]
visible = false
margin_left = 125.0
margin_top = -295.0
margin_right = 195.0
margin_bottom = -225.0
rect_scale = Vector2( 3, 3 )

[node name="Cell10Button" parent="GlobalBoard" instance=ExtResource( 4 )]
visible = false
margin_left = -295.0
margin_top = -85.0
margin_right = -225.0
margin_bottom = -15.0
rect_scale = Vector2( 3, 3 )

[node name="Cell11Button" parent="GlobalBoard" instance=ExtResource( 4 )]
visible = false
margin_left = -85.0
margin_top = -85.0
margin_right = -15.0
margin_bottom = -15.0
rect_scale = Vector2( 3, 3 )

[node name="Cell12Button" parent="GlobalBoard" instance=ExtResource( 4 )]
visible = false
margin_left = 125.0
margin_top = -85.0
margin_right = 195.0
margin_bottom = -15.0
rect_scale = Vector2( 3, 3 )

[node name="Cell20Button" parent="GlobalBoard" instance=ExtResource( 4 )]
visible = false
margin_left = -295.0
margin_top = 125.0
margin_right = -225.0
margin_bottom = 195.0
rect_scale = Vector2( 3, 3 )

[node name="Cell21Button" parent="GlobalBoard" instance=ExtResource( 4 )]
visible = false
margin_left = -85.0
margin_top = 125.0
margin_right = -15.0
margin_bottom = 195.0
rect_scale = Vector2( 3, 3 )

[node name="Cell22Button" parent="GlobalBoard" instance=ExtResource( 4 )]
visible = false
margin_left = 125.0
margin_top = 125.0
margin_right = 195.0
margin_bottom = 195.0
rect_scale = Vector2( 3, 3 )

[node name="GoBackButton" parent="." instance=ExtResource( 5 )]
margin_left = 253.0
margin_top = 1153.0
margin_right = 478.0
margin_bottom = 1281.0
[connection signal="request_completed" from="EventsHTTPRequest" to="." method="_on_EventsHTTPRequest_request_completed"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_GoBackButton_pressed"]
